can move white pieces down a square and see if square already occupied or not

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <div id="board" style="display: flex;flex-wrap: wrap;">
  <div class="row" style="width: 100%;display: flex;flex-wrap: wrap;">
-	<div class="square1" id="One1"><img src="rook.png" alt="" class="piece" id="piece"onclick="clicked('piece','test')"></div>
+	<div class="square1" id="One1"><img src="rook.png" alt="" class="piece" id="piece1"onclick="clicked('piece','test')"></div>
 	<div class="square2" id="One2"onclick="move('One2')"><img src="rook.png" alt="" class="piece" id="piece2"onclick="clicked('piece2','test')"></div>
 	<div class="square1" id="One3" onclick="move('One3')"><img src="rook.png" alt="" class="piece"></div>
 	<div class="square2"><img src="rook.png" alt="" class="piece"></div>
@@ -83,14 +83,14 @@
 </div>
 
 <div class="row" style="display: flex;width: 100%;flex-wrap: wrap;">
-     <div class="square2"> <img src="rook2.png" alt="" class="piece"></div>
-     <div class="square1"><img src="rook2.png" alt="" class="piece"></div>
-     <div class="square2"><img src="rook2.png" alt="" class="piece"></div>
-     <div class="square1"><img src="rook2.png" alt="" class="piece"></div>
-     <div class="square2"><img src="rook2.png" alt="" class="piece"></div>
-     <div class="square1"><img src="rook2.png" alt="" class="piece"></div>
-     <div class="square2"><img src="rook2.png" alt="" class="piece"></div>
-     <div class="square1"><img src="rook2.png" alt="" class="piece"></div>
+     <div class="square2"> <img src="rook2.png" alt="" class="bpiece"></div>
+     <div class="square1"><img src="rook2.png" alt="" class="bpiece"></div>
+     <div class="square2"><img src="rook2.png" alt="" class="bpiece"></div>
+     <div class="square1"><img src="rook2.png" alt="" class="bpiece"></div>
+     <div class="square2"><img src="rook2.png" alt="" class="bpiece"></div>
+     <div class="square1"><img src="rook2.png" alt="" class="bpiece"></div>
+     <div class="square2"><img src="rook2.png" alt="" class="bpiece"></div>
+     <div class="square1"><img src="rook2.png" alt="" class="bpiece"></div>
 </div>
 </div>
  <!-- ul#nav>li.item$*4>a{Item $} (emmet example)--->
