--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body onload="turn()">
 <div id="board" style="display: flex;flex-wrap: wrap;">
  <div class="row" style="width: 100%;display: flex;flex-wrap: wrap;">
-	<div class="square1" id="One1" onclick="move('One1'")><img src="rook.png" alt="" class="piece" id="piece1"onclick="clicked('piece1','One1')"></div>
+	<div class="square1" id="One1" onclick="move('One1')"><img src="rook.png" alt="" class="piece" id="piece1"onclick="clicked('piece1','One1')"></div>
 	<div class="square2" id="One2"onclick="move('One2')"><img src="rook.png" alt="" class="piece" id="piece2"onclick="clicked('piece2','test')"></div>
 	<div class="square1" id="One3" onclick="move('One3')"><img src="rook.png" alt="" class="piece"></div>
 	<div class="square2"><img src="rook.png" alt="" class="piece"></div>
