pawns can now take each other and move in turn however need to disable onlick method once piece selected otherwise can only move by clicking on particular part of square

--- a/index.html
+++ b/index.html
@@ -10,24 +10,24 @@
 <div id="board" style="display: flex;flex-wrap: wrap;">
  <div class="row" style="width: 100%;display: flex;flex-wrap: wrap;">
 	<div class="square1" id="One1" onclick="move('One1')"><img src="rook.png" alt="" class="piece" id="piece1"onclick="clicked('piece1','One1')"></div>
-	<div class="square2" id="One2"onclick="move('One2')"><img src="rook.png" alt="" class="piece" id="piece2"onclick="clicked('piece2','test')"></div>
-	<div class="square1" id="One3" onclick="move('One3')"><img src="rook.png" alt="" class="piece"></div>
-	<div class="square2"><img src="rook.png" alt="" class="piece"></div>
-	<div class="square1"><img src="rook.png" alt="" class="piece"></div>
-	<div class="square2"><img src="rook.png" alt="" class="piece"></div>
-	<div class="square1"><img src="rook.png" alt="" class="piece"></div>
-	<div class="square2"><img src="rook.png" alt="" class="piece"></div>
+	<div class="square2" id="One2"onclick="move('One2')"><img src="rook.png" alt="" class="piece" id="piece2"onclick="clicked('piece2','One2')"></div>
+	<div class="square1" id="One3" onclick="move('One3')"><img src="rook.png" alt="" class="piece" id="piece3"onclick="clicked('piece3','One3')"></div>
+	<div class="square2" id="One4" onclick="move('One4')"><img src="rook.png" alt="" class="piece" id="piece4"onclick="clicked('piece4','One4')"></div>
+	<div class="square1"id="One5" onclick="move('One5')"><img src="rook.png" alt="" class="piece" id="piece5"onclick="clicked('piece5','One5')"></div>
+	<div class="square2"id="One6" onclick="move('One6')"><img src="rook.png" alt="" class="piece" id="piece6"onclick="clicked('piece6','One6')"></div>
+	<div class="square1"id="One7" onclick="move('One7')"><img src="rook.png" alt="" class="piece" id="piece7"onclick="clicked('piece7','One7')"></div>
+	<div class="square2"id="One8" onclick="move('One8')"><img src="rook.png" alt="" class="piece" id="piece8"onclick="clicked('piece8','One8')"></div>
 </div>
 
 <div class="row" style="display: flex;width: 100%;flex-wrap: wrap;">
      <div class="square2" id="Two1" onclick="move('Two1')"><img src="rook2.png" alt="" class="bpiece" id="bpiece1" onclick="clicked('bpiece1','Two1')"></div>
-     <div class="square1" id="Two2" onclick="move('Two2')"><img src="rook2.png" alt="" class="bpiece" id="bpiece1"onclick="clicked('bpiece2','Two2')"></div>
-     <div class="square2"id="Two3" onclick="move('Two3')"></div>
-     <div class="square1" id="Two4" onclick="move('Two4')"></div>
-     <div class="square2"id="Two5" onclick="move('Two5')"></div>
-     <div class="square1"id="Two6" onclick="move('Two6')"></div>
-     <div class="square2"id="Two7" onclick="move('Two7')"></div>
-     <div class="square1"id="Two8" onclick="move('Two8')"></div>
+     <div class="square1" id="Two2" onclick="move('Two2')"><img src="rook2.png" alt="" class="bpiece" id="bpiece2"onclick="clicked('bpiece2','Two2')"></div>
+     <div class="square2"id="Two3" onclick="move('Two3')"><img src="rook2.png" alt="" class="bpiece" id="bpiece3"onclick="clicked('bpiece3','Two3')"></div>
+     <div class="square1" id="Two4" onclick="move('Two4')"><img src="rook2.png" alt="" class="bpiece" id="bpiece4"onclick="clicked('bpiece4','Two4')"></div>
+     <div class="square2"id="Two5" onclick="move('Two5')"><img src="rook2.png" alt="" class="bpiece" id="bpiece5"onclick="clicked('bpiece5','Two5')"></div>
+     <div class="square1"id="Two6" onclick="move('Two6')"><img src="rook2.png" alt="" class="bpiece" id="bpiece6"onclick="clicked('bpiece6','Two6')"></div>
+     <div class="square2"id="Two7" onclick="move('Two7')"><img src="rook2.png" alt="" class="bpiece" id="bpiece7"onclick="clicked('bpiece7','Two7')"></div>
+     <div class="square1"id="Two8" onclick="move('Two8')"><img src="rook2.png" alt="" class="bpiece" id="bpiece8"onclick="clicked('bpiece8','Two8')"></div>
 </div>
 <div class="row" style="width: 100%;display: flex;flex-wrap: wrap;">
 	<div class="square1" id="Three1" onclick="move2('Three1')"></div>
