pawns move behave as expected - next add castles and bishops

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
      <div class="square1"id="Two8" onclick="move('Two8')"><img src="rook2.png" alt="" class="bpiece" id="bpiece8"onclick="clicked('bpiece8','Two8')"></div>
 </div>
 <div class="row" style="width: 100%;display: flex;flex-wrap: wrap;">
-	<div class="square1" id="Three1" onclick="move2('Three1')"></div>
+	<div class="square1" id="Three1" onclick="move('Three1')"></div>
 	<div class="square2"></div>
 	<div class="square1"></div>
 	<div class="square2"></div>
