added castle and js to provide basic functionality for the piece

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 </div>
 <div class="row" style="width: 100%;display: flex;flex-wrap: wrap;">
 	<div class="square1" id="Three1" onclick="move('Three1')"></div>
-	<div class="square2"></div>
+	<div class="square2" id="Three2" onclick="move('Three2')"><img src="castle.png" class="piece" id="bpiece9" onclick="clicked('bpiece9','Three2')"></div>
 	<div class="square1"></div>
 	<div class="square2"></div>
 	<div class="square1"></div>
