--- a/index.html
+++ b/index.html
@@ -9,35 +9,35 @@
 <body onload="turn()">
 <div id="board" style="display: flex;flex-wrap: wrap;">
  <div class="row" style="width: 100%;display: flex;flex-wrap: wrap;">
-	<div class="square1" id="One1" onclick="move('One1')"><img src="rook.png" alt="" class="piece" id="piece1"onclick="clicked('piece1','One1')"></div>
-	<div class="square2" id="One2"onclick="move('One2')"><img src="rook.png" alt="" class="piece" id="piece2"onclick="clicked('piece2','One2')"></div>
-	<div class="square1" id="One3" onclick="move('One3')"><img src="rook.png" alt="" class="piece" id="piece3"onclick="clicked('piece3','One3')"></div>
-	<div class="square2" id="One4" onclick="move('One4')"><img src="rook.png" alt="" class="piece" id="piece4"onclick="clicked('piece4','One4')"></div>
-	<div class="square1"id="One5" onclick="move('One5')"><img src="rook.png" alt="" class="piece" id="piece5"onclick="clicked('piece5','One5')"></div>
-	<div class="square2"id="One6" onclick="move('One6')"><img src="rook.png" alt="" class="piece" id="piece6"onclick="clicked('piece6','One6')"></div>
-	<div class="square1"id="One7" onclick="move('One7')"><img src="rook.png" alt="" class="piece" id="piece7"onclick="clicked('piece7','One7')"></div>
-	<div class="square2"id="One8" onclick="move('One8')"><img src="rook.png" alt="" class="piece" id="piece8"onclick="clicked('piece8','One8')"></div>
+	<div class="square1" id="One1" onclick="move('One1')"><img src="assets/pawn.png" alt="" class="piece" id="white1"onclick="clicked('white1','One1')"></div>
+	<div class="square2" id="One2"onclick="move('One2')"><img src="assets/pawn.png" alt="" class="piece" id="white2"onclick="clicked('white2','One2')"></div>
+	<div class="square1" id="One3" onclick="move('One3')"><img src="assets/pawn.png" alt="" class="piece" id="white3"onclick="clicked('white3','One3')"></div>
+	<div class="square2" id="One4" onclick="move('One4')"><img src="assets/pawn.png" alt="" class="piece" id="white4"onclick="clicked('white4','One4')"></div>
+	<div class="square1"id="One5" onclick="move('One5')"><img src="assets/pawn.png" alt="" class="piece" id="white5"onclick="clicked('white5','One5')"></div>
+	<div class="square2"id="One6" onclick="move('One6')"><img src="assets/pawn.png" alt="" class="piece" id="white6"onclick="clicked('white6','One6')"></div>
+	<div class="square1"id="One7" onclick="move('One7')"><img src="assets/pawn.png" alt="" class="piece" id="white7"onclick="clicked('white7','One7')"></div>
+	<div class="square2"id="One8" onclick="move('One8')"><img src="assets/pawn.png" alt="" class="piece" id="white8"onclick="clicked('white8','One8')"></div>
 </div>
 
 <div class="row" style="display: flex;width: 100%;flex-wrap: wrap;">
-     <div class="square2" id="Two1" onclick="move('Two1')"><img src="rook2.png" alt="" class="bpiece" id="bpiece1" onclick="clicked('bpiece1','Two1')"></div>
-     <div class="square1" id="Two2" onclick="move('Two2')"><img src="rook2.png" alt="" class="bpiece" id="bpiece2"onclick="clicked('bpiece2','Two2')"></div>
-     <div class="square2"id="Two3" onclick="move('Two3')"><img src="rook2.png" alt="" class="bpiece" id="bpiece3"onclick="clicked('bpiece3','Two3')"></div>
-     <div class="square1" id="Two4" onclick="move('Two4')"><img src="rook2.png" alt="" class="bpiece" id="bpiece4"onclick="clicked('bpiece4','Two4')"></div>
-     <div class="square2"id="Two5" onclick="move('Two5')"><img src="rook2.png" alt="" class="bpiece" id="bpiece5"onclick="clicked('bpiece5','Two5')"></div>
-     <div class="square1"id="Two6" onclick="move('Two6')"><img src="rook2.png" alt="" class="bpiece" id="bpiece6"onclick="clicked('bpiece6','Two6')"></div>
-     <div class="square2"id="Two7" onclick="move('Two7')"><img src="rook2.png" alt="" class="bpiece" id="bpiece7"onclick="clicked('bpiece7','Two7')"></div>
-     <div class="square1"id="Two8" onclick="move('Two8')"><img src="rook2.png" alt="" class="bpiece" id="bpiece8"onclick="clicked('bpiece8','Two8')"></div>
+     <div class="square2" id="Two1" onclick="move('Two1')"><img src="assets/rook.png" alt="" class="piece" id="white9" onclick="clicked('white9','Two1')"></div>
+     <div class="square1" id="Two2" onclick="move('Two2')"><img src="rook2.png" alt="" class="bpiece" id="black2"onclick="clicked('black2','Two2')"></div>
+     <div class="square2"id="Two3" onclick="move('Two3')"><img src="rook2.png" alt="" class="bpiece" id="black3"onclick="clicked('black3','Two3')"></div>
+     <div class="square1" id="Two4" onclick="move('Two4')"><img src="rook2.png" alt="" class="bpiece" id="black4"onclick="clicked('black4','Two4')"></div>
+     <div class="square2"id="Two5" onclick="move('Two5')"><img src="rook2.png" alt="" class="bpiece" id="black5"onclick="clicked('black5','Two5')"></div>
+     <div class="square1"id="Two6" onclick="move('Two6')"><img src="rook2.png" alt="" class="bpiece" id="black6"onclick="clicked('black6','Two6')"></div>
+     <div class="square2"id="Two7" onclick="move('Two7')"><img src="rook2.png" alt="" class="bpiece" id="black7"onclick="clicked('black11','Two7')"></div>
+     <div class="square1"id="Two8" onclick="move('Two8')"><img src="assets/rook.png" alt="" class="piece" id="white10"onclick="clicked('white10','Two8')"></div>
 </div>
 <div class="row" style="width: 100%;display: flex;flex-wrap: wrap;">
 	<div class="square1" id="Three1" onclick="move('Three1')"></div>
-	<div class="square2" id="Three2" onclick="move('Three2')"><img src="castle.png" class="piece" id="bpiece9" onclick="clicked('bpiece9','Three2')"></div>
-	<div class="square1"></div>
-	<div class="square2"></div>
-	<div class="square1"></div>
-	<div class="square2"></div>
-	<div class="square1"></div>
-	<div class="square2"></div>
+	<div class="square2" id="Three2" onclick="move('Three2')"><img src="castle.png" class="piece" id="black9" onclick="clicked('black9','Three2')"></div>
+	<div class="square1"id="Three3" onclick="move('Three3')"></div>
+	<div class="square2"id="Three4" onclick="move('Three4')"></div>
+	<div class="square1"id="Three5" onclick="move('Three5')"></div>
+	<div class="square2"id="Three6" onclick="move('Three6')"></div>
+	<div class="square1"id="Three7" onclick="move('Three7')"></div>
+	<div class="square2"id="Three8" onclick="move('Three8')"></div>
 </div>
 
 <div class="row" style="display: flex;width: 100%;flex-wrap: wrap;">
