--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 </div>
 <div class="row" style="width: 100%;display: flex;flex-wrap: wrap;">
 	<div class="square1" id="Three1" onclick="move('Three1')"></div>
-	<div class="square2" id="Three2" onclick="move('Three2')"><img src="castle.png" class="piece" id="black9" onclick="clicked('black9','Three2')"></div>
+	<div class="square2" id="Three2" onclick="move('Three2')"></div>
 	<div class="square1"id="Three3" onclick="move('Three3')"></div>
 	<div class="square2"id="Three4" onclick="move('Three4')"></div>
 	<div class="square1"id="Three5" onclick="move('Three5')"></div>
@@ -55,7 +55,7 @@
 	<div class="square2"id="Five2" onclick="move('Five2')"></div>
 	<div class="square1"id="Five3" onclick="move('Five3')"></div>
 	<div class="square2"id="Five4" onclick="move('Five4')"></div>
-	<div class="square1"id="Five5" onclick="move('Five5')"></div>
+	<div class="square1"id="Five5" onclick="move('Five5')"><img src="assets/knight2.png" alt="" class="bpiece" id ="black14"onclick="clicked('black14','Eight1')"></div>
 	<div class="square2"id="Five6" onclick="move('Five6')"></div>
 	<div class="square1"id="Five7" onclick="move('Five7')"></div>
 	<div class="square2"id="Five8" onclick="move('Five8)"></div>
@@ -76,7 +76,7 @@
 	<div class="square2"id="Seven2" onclick="move('Seven2')"><img src="assets/bishop2.png" class="piece" id="bpiece10" onclick="clicked('bpiece10','Seven2')"></div>
 	<div class="square1"id="Seven3" onclick="move('Seven3')"><img src="assets/knight2.png" alt="" class="bpiece" id ="black11"onclick="clicked('black11','Eight1')"></div>
 	<div class="square2"id="Seven4" onclick="move('Seven4')"><img src="assets/queen2.png" alt="" class="bpiece" id ="black12"onclick="clicked('black12','Eight1')"></div>
-	<div class="square1"id="Seven5" onclick="move('Seven5')"><img src="assets/king2.png" alt="" class="bpiece" id ="black13"onclick="clicked('black13','Eight1')"></div>
+	<div class="square1"id="Seven5" onclick="move('Seven5')"><img src="assets/king2.png" alt="" class="bpiece" id ="black13"onclick="clicked('black13','Eight1')"><</div>
 	<div class="square2"id="Seven6" onclick="move('Seven6')"><img src="assets/knight2.png" alt="" class="bpiece" id ="black14"onclick="clicked('black14','Eight1')"></div>
 	<div class="square1"id="Seven7" onclick="move('Seven7')"><img src="assets/bishop2.png" alt="" class="bpiece" id ="black15"onclick="clicked('black15','Eight1')"></div>
 	<div class="square2"id="Seven8" onclick="move('Seven8')"><img src="assets/rook2.png" alt="" class="bpiece" id ="black16"onclick="clicked('black16','Eight1')"></div>
