learned why bishop function not working on all move, needed to use parseInt to convert Strings to integers

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
      <div class="square2" id="Four5" onclick="move('Four5')"></div>
      <div class="square1"id="Four6" onclick="move('Four6')"></div>
      <div class="square2"id="Four7" onclick="move('Four7')"></div>
-     <div class="square1"id="Four8" onclick="move('Three8')"></div>
+     <div class="square1"id="Four8" onclick="move('Four8')"></div>
 </div>
 <div class="row" style="width: 100%;display: flex;flex-wrap: wrap;">
 	<div class="square1" id="Five1" onclick="move('Five1')"></div>
@@ -72,14 +72,14 @@
      <div class="square1"id="Six8" onclick="move('Six8')"></div>
 </div>
 <div class="row" style="width: 100%;display: flex;flex-wrap: wrap;">
-	<div class="square1"id="Seven1" onclick="move('Seven1')"><img src="assets/rook2.png" alt="" class="bpiece" id ="black9"onclick="clicked('black8','Eight1')"></div>
+	<div class="square1"id="Seven1" onclick="move('Seven1')"><img src="assets/rook2.png" alt="" class="bpiece" id ="black9"onclick="clicked('black9','Seven1')"></div>
 	<div class="square2"id="Seven2" onclick="move('Seven2')"><img src="assets/bishop2.png" class="piece" id="bpiece10" onclick="clicked('bpiece10','Seven2')"></div>
-	<div class="square1"id="Seven3" onclick="move('Seven3')"><img src="assets/knight2.png" alt="" class="bpiece" id ="black11"onclick="clicked('black11','Eight1')"></div>
-	<div class="square2"id="Seven4" onclick="move('Seven4')"><img src="assets/queen2.png" alt="" class="bpiece" id ="black12"onclick="clicked('black12','Eight1')"></div>
-	<div class="square1"id="Seven5" onclick="move('Seven5')"><img src="assets/king2.png" alt="" class="bpiece" id ="black13"onclick="clicked('black13','Eight1')"><</div>
-	<div class="square2"id="Seven6" onclick="move('Seven6')"><img src="assets/knight2.png" alt="" class="bpiece" id ="black14"onclick="clicked('black14','Eight1')"></div>
-	<div class="square1"id="Seven7" onclick="move('Seven7')"><img src="assets/bishop2.png" alt="" class="bpiece" id ="black15"onclick="clicked('black15','Eight1')"></div>
-	<div class="square2"id="Seven8" onclick="move('Seven8')"><img src="assets/rook2.png" alt="" class="bpiece" id ="black16"onclick="clicked('black16','Eight1')"></div>
+	<div class="square1"id="Seven3" onclick="move('Seven3')"><img src="assets/knight2.png" alt="" class="bpiece" id ="black11"onclick="clicked('black11','Seven3')"></div>
+	<div class="square2"id="Seven4" onclick="move('Seven4')"><img src="assets/queen2.png" alt="" class="bpiece" id ="black12"onclick="clicked('black12','Seven4')"></div>
+	<div class="square1"id="Seven5" onclick="move('Seven5')"><img src="assets/king2.png" alt="" class="bpiece" id ="black13"onclick="clicked('black13','Seven5')"></div>
+	<div class="square2"id="Seven6" onclick="move('Seven6')"><img src="assets/knight2.png" alt="" class="bpiece" id ="black14"onclick="clicked('black14','Seven6')"></div>
+	<div class="square1"id="Seven7" onclick="move('Seven7')"><img src="assets/bishop2.png" alt="" class="bpiece" id ="black15"onclick="clicked('black15','Seven7')"></div>
+	<div class="square2"id="Seven8" onclick="move('Seven8')"><img src="assets/rook2.png" alt="" class="bpiece" id ="black16"onclick="clicked('black16','Seven8')"></div>
 </div>
 
 <div class="row" style="display: flex;width: 100%;flex-wrap: wrap;">
@@ -90,7 +90,7 @@
      <div class="square2"id="Eight5" onclick="move('Eight5')"><img src="assets/pawn2.png" alt="" class="bpiece"id ="black5"onclick="clicked('black5','Eight5')"></div>
      <div class="square1"id="Eight6" onclick="move('Eight6')"><img src="assets/pawn2.png" alt="" class="bpiece"id ="black6"onclick="clicked('black6','Eight6')"></div>
      <div class="square2"id="Eight7" onclick="move('Eight7')"><img src="assets/pawn2.png" alt="" class="bpiece"id ="black7"onclick="clicked('black1','Eight7')"></div>
-     <div class="square1"id="Eight8" onclick="move('Seven8')"><img src="asset/pawnr2.png" alt="" class="bpiece"id ="black8"onclick="clicked('black8','Eight8')"></div>
+     <div class="square1"id="Eight8" onclick="move('Seven8')"><img src="assets/pawn2.png" alt="" class="bpiece"id ="black8"onclick="clicked('black8','Eight8')"></div>
 </div>
 </div>
  <!-- ul#nav>li.item$*4>a{Item $} (emmet example)--->
