--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<div class="square1"id="One5" onclick="move('One5')"><img src="assets/pawn.png" alt="" class="piece" id="white5"onclick="clicked('white5','One5')"></div>
 	<div class="square2"id="One6" onclick="move('One6')"><img src="assets/pawn.png" alt="" class="piece" id="white6"onclick="clicked('white6','One6')"></div>
 	<div class="square1"id="One7" onclick="move('One7')"><img src="assets/pawn.png" alt="" class="piece" id="white7"onclick="clicked('white7','One7')"></div>
-	<div class="square2"id="One8" onclick="move('One8')"><img src="assets/pawn.png" alt="" class="piece" id="white8"onclick="clicked('white8','One8')"></div>
+	<div class="square2"id="One8" onclick="move('One8')"></div>
 </div>
 
 <div class="row" style="display: flex;width: 100%;flex-wrap: wrap;">
@@ -30,7 +30,7 @@
      <div class="square1"id="Two8" onclick="move('Two8')"><img src="assets/rook.png" alt="" class="piece" id="white16"onclick="clicked('white16','Two8')"></div>
 </div>
 <div class="row" style="width: 100%;display: flex;flex-wrap: wrap;">
-	<div class="square1" id="Three1" onclick="move('Three1')"></div>
+	<div class="square1" id="Three1" onclick="move('Three1')"><img src="assets/pawn.png" alt="" class="piece" id="white8"onclick="clicked('white8','One8')"></div>
 	<div class="square2" id="Three2" onclick="move('Three2')"></div>
 	<div class="square1"id="Three3" onclick="move('Three3')"></div>
 	<div class="square2"id="Three4" onclick="move('Three4')"></div>
