added diagonal option for pawn fixed bugs with bishops

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 <div class="row" style="display: flex;width: 100%;flex-wrap: wrap;">
      <div class="square2" id="Four1" onclick="move('Four1')"></div>
-     <div class="square1"id="Four2" onclick="move('Four2')"></div>
+     <div class="square1"id="Four2" onclick="move('Four2')"><img src="assets/pawn2.png" alt="" class="bpiece"id ="black7"onclick="clicked('black7','Four2')"></div>
      <div class="square2"id="Four3" onclick="move('Four3')"></div>
      <div class="square1" id="Four4" onclick="move('Four4')"></div>
      <div class="square2" id="Four5" onclick="move('Four5')"></div>
@@ -89,7 +89,7 @@
      <div class="square1"id="Eight4" onclick="move('Eight4')"><img src="assets/pawn2.png" alt="" class="bpiece"id ="black4"onclick="clicked('black4','Eight4')"></div>
      <div class="square2"id="Eight5" onclick="move('Eight5')"><img src="assets/pawn2.png" alt="" class="bpiece"id ="black5"onclick="clicked('black5','Eight5')"></div>
      <div class="square1"id="Eight6" onclick="move('Eight6')"><img src="assets/pawn2.png" alt="" class="bpiece"id ="black6"onclick="clicked('black6','Eight6')"></div>
-     <div class="square2"id="Eight7" onclick="move('Eight7')"><img src="assets/pawn2.png" alt="" class="bpiece"id ="black7"onclick="clicked('black1','Eight7')"></div>
+     <div class="square2"id="Eight7" onclick="move('Eight7')"></div>
      <div class="square1"id="Eight8" onclick="move('Seven8')"><img src="assets/pawn2.png" alt="" class="bpiece"id ="black8"onclick="clicked('black8','Eight8')"></div>
 </div>
 </div>
