all pieces work now except that pawns cannot have two moves at beggining - need to add this capability from other repo and continue to work on check function

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
      <div class="square1"id="Two8" onclick="move('Two8')"><img src="assets/rook.png" alt="" class="piece" id="white16"onclick="clicked('white16','Two8')"></div>
 </div>
 <div class="row" style="width: 100%;display: flex;flex-wrap: wrap;">
-	<div class="square1" id="Three1" onclick="move('Three1')"><img src="assets/pawn.png" alt="" class="piece" id="white8"onclick="clicked('white8','One8')"></div>
+	<div class="square1" id="Three1" onclick="move('Three1')"><img src="assets/pawn.png" alt="" class="piece" id="white8"onclick="clicked('white8','Three1')"></div>
 	<div class="square2" id="Three2" onclick="move('Three2')"></div>
 	<div class="square1"id="Three3" onclick="move('Three3')"></div>
 	<div class="square2"id="Three4" onclick="move('Three4')"></div>
@@ -58,7 +58,7 @@
 	<div class="square1"id="Five5" onclick="move('Five5')"><img src="assets/knight2.png" alt="" class="bpiece" id ="black14"onclick="clicked('black14','Eight1')"></div>
 	<div class="square2"id="Five6" onclick="move('Five6')"></div>
 	<div class="square1"id="Five7" onclick="move('Five7')"></div>
-	<div class="square2"id="Five8" onclick="move('Five8)"></div>
+	<div class="square2"id="Five8" onclick="move('Five8')"></div>
 </div>
 
 <div class="row" style="display: flex;width: 100%;flex-wrap: wrap;">
@@ -90,7 +90,7 @@
      <div class="square2"id="Eight5" onclick="move('Eight5')"><img src="assets/pawn2.png" alt="" class="bpiece"id ="black5"onclick="clicked('black5','Eight5')"></div>
      <div class="square1"id="Eight6" onclick="move('Eight6')"><img src="assets/pawn2.png" alt="" class="bpiece"id ="black6"onclick="clicked('black6','Eight6')"></div>
      <div class="square2"id="Eight7" onclick="move('Eight7')"></div>
-     <div class="square1"id="Eight8" onclick="move('Seven8')"><img src="assets/pawn2.png" alt="" class="bpiece"id ="black8"onclick="clicked('black8','Eight8')"></div>
+     <div class="square1"id="Eight8" onclick="move('Eight8')"><img src="assets/pawn2.png" alt="" class="bpiece"id ="black8"onclick="clicked('black8','Eight8')"></div>
 </div>
 </div>
  <!-- ul#nav>li.item$*4>a{Item $} (emmet example)--->
