working on check function

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 	<div class="square2" id="Three2" onclick="move('Three2')"></div>
 	<div class="square1"id="Three3" onclick="move('Three3')"></div>
 	<div class="square2"id="Three4" onclick="move('Three4')"></div>
-	<div class="square1"id="Three5" onclick="move('Three5')"></div>
+	<div class="square1"id="Three5" onclick="move('Three5')"><img src="assets/rook2.png" alt="" class="bpiece" id ="black9"onclick="clicked('black9','Three5')"></div>
 	<div class="square2"id="Three6" onclick="move('Three6')"></div>
 	<div class="square1"id="Three7" onclick="move('Three7')"></div>
 	<div class="square2"id="Three8" onclick="move('Three8')"><img src="assets/rook2.png" alt="" class="bpiece" id ="black16"onclick="clicked('black16','Three8')"></div>
@@ -72,7 +72,7 @@
      <div class="square1"id="Six8" onclick="move('Six8')"></div>
 </div>
 <div class="row" style="width: 100%;display: flex;flex-wrap: wrap;">
-	<div class="square1"id="Seven1" onclick="move('Seven1')"><img src="assets/rook2.png" alt="" class="bpiece" id ="black9"onclick="clicked('black9','Seven1')"></div>
+	<div class="square1"id="Seven1" onclick="move('Seven1')"></div>
 	<div class="square2"id="Seven2" onclick="move('Seven2')"><img src="assets/bishop2.png" class="piece" id="bpiece10" onclick="clicked('bpiece10','Seven2')"></div>
 	<div class="square1"id="Seven3" onclick="move('Seven3')"><img src="assets/knight2.png" alt="" class="bpiece" id ="black11"onclick="clicked('black11','Seven3')"></div>
 	<div class="square2"id="Seven4" onclick="move('Seven4')"><img src="assets/queen2.png" alt="" class="bpiece" id ="black12"onclick="clicked('black12','Seven4')"></div>
