use move6.js and it almost works but someimtes thinks in check when not fix this

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </div>
 
 <div class="row" style="display: flex;width: 100%;flex-wrap: wrap;">
-     <div class="square2" id="Two1" onclick="move('Two1')"><img src="assets/rook.png" alt="" class="piece" id="white9" onclick="clicked('white9','Two1')"></div>
+     <div class="square2" id="Two1" onclick="move('Two1')"></div>
      <div class="square1" id="Two2" onclick="move('Two2')"><img src="assets/bishop.png" alt="" class="bpiece" id="white10"onclick="clicked('white10','Two2')"></div>
      <div class="square2"id="Two3" onclick="move('Two3')"><img src="assets/knight.png" alt="" class="bpiece" id="white11"onclick="clicked('white11','Two3')"></div>
      <div class="square1" id="Two4" onclick="move('Two4')"><img src="assets/queen.png" alt="" class="bpiece" id="white12"onclick="clicked('white12','Two4')"></div>
@@ -66,7 +66,7 @@
      <div class="square1"id="Six2" onclick="move('Six2')"></div>
      <div class="square2"id="Six3" onclick="move('Six3')"></div>
      <div class="square1"id="Six4" onclick="move('Six4')"></div>
-     <div class="square2"id="Six5" onclick="move('Six5')"></div>
+     <div class="square2"id="Six5" onclick="move('Six5')"><img src="assets/rook.png" alt="" class="piece" id="white9" onclick="clicked('white9','Six5')"></div>
      <div class="square1"id="Six6" onclick="move('Six6')"></div>
      <div class="square2"id="Six7" onclick="move('Six7')"></div>
      <div class="square1"id="Six8" onclick="move('Six8')"></div>
@@ -97,9 +97,8 @@
 
  <!-- JS scripts --->
  <script src ="js/clicked.js"></script>
- <script src ="js/move.js"></script>
  <script src="js/turn.js"></script>
- <script src="js/move2.js"></script>
+ <script src="js/move5.js"></script>
 
 </body>
 </html>
