--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 	<div class="square1" id="Three1" onclick="move('Three1')"><img src="assets/rook.png" alt="" class="piece" id="white16"onclick="clicked('white16','Three1')"><</div>
 	<div class="square2" id="Three2" onclick="move('Three2')"></div>
 	<div class="square1"id="Three3" onclick="move('Three3')"></div>
-	<div class="square2"id="Three4" onclick="move('Three4')"></div>
+	<div class="square2"id="Three4" onclick="move('Three4')"><img src="assets/rook2.png" alt="" class="bpiece" id ="black9"onclick="clicked('black9','Three4')"></div>
 	<div class="square1"id="Three5" onclick="move('Three5')"><img src="assets/rook2.png" alt="" class="bpiece" id ="black16"onclick="clicked('black16','Three5')"></div>
 	<div class="square2"id="Three6" onclick="move('Three6')"></div>
 	<div class="square1"id="Three7" onclick="move('Three7')"></div>
@@ -48,7 +48,7 @@
      <div class="square2" id="Four5" onclick="move('Four5')"></div>
      <div class="square1"id="Four6" onclick="move('Four6')"></div>
      <div class="square2"id="Four7" onclick="move('Four7')"></div>
-     <div class="square1"id="Four8" onclick="move('Four8')"><img src="assets/rook2.png" alt="" class="bpiece" id ="black9"onclick="clicked('black9','Four8')"></div>
+     <div class="square1"id="Four8" onclick="move('Four8')"></div>
 </div>
 <div class="row" style="width: 100%;display: flex;flex-wrap: wrap;">
 	<div class="square1" id="Five1" onclick="move('Five1')"></div>
@@ -98,7 +98,7 @@
  <!-- JS scripts --->
  <script src ="js/clicked.js"></script>
  <script src="js/turn.js"></script>
- <script src="js/move7.js"></script>
+ <script src="js/move8.js"></script>
 
 </body>
 </html>
