check now seems to be working test with differnt starting configurations to make sure, pawns also working, there is one knight move that doesn;t work find this and fix once all done maybe add feature that turns pawns into queens if they get to end i.e check for last square before rendering and if so render a queen have all pieces with ids in a certain range identify as queens and have the onclick be for that suqare etc

--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
      <div class="square2"id="Two5" onclick="move('Two5')"><img src="assets/king.png" alt="" class="bpiece" id="white13"onclick="clicked('white13','Two5')"></div>
      <div class="square1"id="Two6" onclick="move('Two6')"><img src="assets/knight.png" alt="" class="bpiece" id="white14"onclick="clicked('white14','Two6')"></div>
      <div class="square2"id="Two7" onclick="move('Two7')"><img src="assets/bishop.png" alt="" class="bpiece" id="white15"onclick="clicked('white15','Two7')"></div>
-     <div class="square1"id="Two8" onclick="move('Two8')"><img src="assets/pawn.png" alt="" class="piece" id="white8"onclick="clicked('white8','Two8')"></div>
+     <div class="square1"id="Two8" onclick="move('Two8')"></div>
 </div>
 <div class="row" style="width: 100%;display: flex;flex-wrap: wrap;">
 	<div class="square1" id="Three1" onclick="move('Three1')"><img src="assets/rook.png" alt="" class="piece" id="white16"onclick="clicked('white16','Three1')"><</div>
 	<div class="square2" id="Three2" onclick="move('Three2')"></div>
 	<div class="square1"id="Three3" onclick="move('Three3')"></div>
 	<div class="square2"id="Three4" onclick="move('Three4')"><img src="assets/rook2.png" alt="" class="bpiece" id ="black9"onclick="clicked('black9','Three4')"></div>
-	<div class="square1"id="Three5" onclick="move('Three5')"><img src="assets/rook2.png" alt="" class="bpiece" id ="black16"onclick="clicked('black16','Three5')"></div>
+	<div class="square1"id="Three5" onclick="move('Three5')"></div>
 	<div class="square2"id="Three6" onclick="move('Three6')"></div>
 	<div class="square1"id="Three7" onclick="move('Three7')"></div>
 	<div class="square2"id="Three8" onclick="move('Three8')"></div>
@@ -45,13 +45,13 @@
      <div class="square1"id="Four2" onclick="move('Four2')"><img src="assets/pawn2.png" alt="" class="bpiece"id ="black7"onclick="clicked('black7','Four2')"></div>
      <div class="square2"id="Four3" onclick="move('Four3')"></div>
      <div class="square1" id="Four4" onclick="move('Four4')"></div>
-     <div class="square2" id="Four5" onclick="move('Four5')"></div>
-     <div class="square1"id="Four6" onclick="move('Four6')"></div>
-     <div class="square2"id="Four7" onclick="move('Four7')"></div>
+     <div class="square2" id="Four5" onclick="move('Four5')"><img src="assets/bishop2.png" alt="" class="bpiece" id ="black15"onclick="clicked('black15','Four5')"></div>
+     <div class="square1"id="Four6" onclick="move('Four6')"><img src="assets/pawn2.png" alt="" class="bpiece"id ="black6"onclick="clicked('black6','Four6')"></div>
+     <div class="square2"id="Four7" onclick="move('Four7')"><img src="assets/pawn.png" alt="" class="piece" id="white8"onclick="clicked('white8','Four7')"></div>
      <div class="square1"id="Four8" onclick="move('Four8')"></div>
 </div>
 <div class="row" style="width: 100%;display: flex;flex-wrap: wrap;">
-	<div class="square1" id="Five1" onclick="move('Five1')"></div>
+	<div class="square1" id="Five1" onclick="move('Five1')"><img src="assets/rook2.png" alt="" class="bpiece" id ="black16"onclick="clicked('black16','Five1')"></div>
 	<div class="square2"id="Five2" onclick="move('Five2')"></div>
 	<div class="square1"id="Five3" onclick="move('Five3')"></div>
 	<div class="square2"id="Five4" onclick="move('Five4')"></div>
@@ -62,11 +62,11 @@
 </div>
 
 <div class="row" style="display: flex;width: 100%;flex-wrap: wrap;">
-     <div class="square2"id="Six1" onclick="move('Six1')"></div>
+     <div class="square2"id="Six1" onclick="move('Six1')"><img src="assets/rook.png" alt="" class="piece" id="white9" onclick="clicked('white9','Six1')"></div>
      <div class="square1"id="Six2" onclick="move('Six2')"></div>
      <div class="square2"id="Six3" onclick="move('Six3')"></div>
      <div class="square1"id="Six4" onclick="move('Six4')"></div>
-     <div class="square2"id="Six5" onclick="move('Six5')"><img src="assets/rook.png" alt="" class="piece" id="white9" onclick="clicked('white9','Six5')"></div>
+     <div class="square2"id="Six5" onclick="move('Six5')"></div>
      <div class="square1"id="Six6" onclick="move('Six6')"></div>
      <div class="square2"id="Six7" onclick="move('Six7')"></div>
      <div class="square1"id="Six8" onclick="move('Six8')"></div>
@@ -78,7 +78,7 @@
 	<div class="square2"id="Seven4" onclick="move('Seven4')"><img src="assets/queen2.png" alt="" class="bpiece" id ="black12"onclick="clicked('black12','Seven4')"></div>
 	<div class="square1"id="Seven5" onclick="move('Seven5')"><img src="assets/king2.png" alt="" class="bpiece" id ="black13"onclick="clicked('black13','Seven5')"></div>
 	<div class="square2"id="Seven6" onclick="move('Seven6')"><img src="assets/knight2.png" alt="" class="bpiece" id ="black14"onclick="clicked('black14','Seven6')"></div>
-	<div class="square1"id="Seven7" onclick="move('Seven7')"><img src="assets/bishop2.png" alt="" class="bpiece" id ="black15"onclick="clicked('black15','Seven7')"></div>
+	<div class="square1"id="Seven7" onclick="move('Seven7')"></div>
 	<div class="square2"id="Seven8" onclick="move('Seven8')"></div>
 </div>
 
@@ -88,7 +88,7 @@
      <div class="square2"id="Eight3" onclick="move('Eight3')"><img src="assets/pawn2.png" alt="" class="bpiece"id ="black3"onclick="clicked('black3','Eight3')"></div>
      <div class="square1"id="Eight4" onclick="move('Eight4')"><img src="assets/pawn2.png" alt="" class="bpiece"id ="black4"onclick="clicked('black4','Eight4')"></div>
      <div class="square2"id="Eight5" onclick="move('Eight5')"><img src="assets/pawn2.png" alt="" class="bpiece"id ="black5"onclick="clicked('black5','Eight5')"></div>
-     <div class="square1"id="Eight6" onclick="move('Eight6')"><img src="assets/pawn2.png" alt="" class="bpiece"id ="black6"onclick="clicked('black6','Eight6')"></div>
+     <div class="square1"id="Eight6" onclick="move('Eight6')"></div>
      <div class="square2"id="Eight7" onclick="move('Eight7')"></div>
      <div class="square1"id="Eight8" onclick="move('Eight8')"><img src="assets/pawn2.png" alt="" class="bpiece"id ="black8"onclick="clicked('black8','Eight8')"></div>
 </div>
