--- a/index.html
+++ b/index.html
@@ -16,24 +16,24 @@
 	<div class="square1"id="One5" onclick="move('One5')"><img src="assets/pawn.png" alt="" class="piece" id="white5"onclick="clicked('white5','One5')"></div>
 	<div class="square2"id="One6" onclick="move('One6')"><img src="assets/pawn.png" alt="" class="piece" id="white6"onclick="clicked('white6','One6')"></div>
 	<div class="square1"id="One7" onclick="move('One7')"><img src="assets/pawn.png" alt="" class="piece" id="white7"onclick="clicked('white7','One7')"></div>
-	<div class="square2"id="One8" onclick="move('One8')"></div>
+	<div class="square2"id="One8" onclick="move('One8')"><img src="assets/pawn.png" alt="" class="piece" id="white8"onclick="clicked('white8','One8')"></div>
 </div>
 
 <div class="row" style="display: flex;width: 100%;flex-wrap: wrap;">
-     <div class="square2" id="Two1" onclick="move('Two1')"></div>
-     <div class="square1" id="Two2" onclick="move('Two2')"><img src="assets/bishop.png" alt="" class="bpiece" id="white10"onclick="clicked('white10','Two2')"></div>
+     <div class="square2" id="Two1" onclick="move('Two1')"><img src="assets/rook.png" alt="" class="piece" id="white16"onclick="clicked('white16','Two1')"></div>
+     <div class="square1" id="Two2" onclick="move('Two2')"></div>
      <div class="square2"id="Two3" onclick="move('Two3')"><img src="assets/knight.png" alt="" class="bpiece" id="white11"onclick="clicked('white11','Two3')"></div>
      <div class="square1" id="Two4" onclick="move('Two4')"><img src="assets/queen.png" alt="" class="bpiece" id="white12"onclick="clicked('white12','Two4')"></div>
      <div class="square2"id="Two5" onclick="move('Two5')"><img src="assets/king.png" alt="" class="bpiece" id="white13"onclick="clicked('white13','Two5')"></div>
-     <div class="square1"id="Two6" onclick="move('Two6')"><img src="assets/knight.png" alt="" class="bpiece" id="white14"onclick="clicked('white14','Two6')"></div>
+     <div class="square1"id="Two6" onclick="move('Two6')"></div>
      <div class="square2"id="Two7" onclick="move('Two7')"><img src="assets/bishop.png" alt="" class="bpiece" id="white15"onclick="clicked('white15','Two7')"></div>
      <div class="square1"id="Two8" onclick="move('Two8')"></div>
 </div>
 <div class="row" style="width: 100%;display: flex;flex-wrap: wrap;">
-	<div class="square1" id="Three1" onclick="move('Three1')"><img src="assets/rook.png" alt="" class="piece" id="white16"onclick="clicked('white16','Three1')"><</div>
+	<div class="square1" id="Three1" onclick="move('Three1')"><</div>
 	<div class="square2" id="Three2" onclick="move('Three2')"></div>
 	<div class="square1"id="Three3" onclick="move('Three3')"></div>
-	<div class="square2"id="Three4" onclick="move('Three4')"><img src="assets/rook2.png" alt="" class="bpiece" id ="black9"onclick="clicked('black9','Three4')"></div>
+	<div class="square2"id="Three4" onclick="move('Three4')"></div>
 	<div class="square1"id="Three5" onclick="move('Three5')"></div>
 	<div class="square2"id="Three6" onclick="move('Three6')"></div>
 	<div class="square1"id="Three7" onclick="move('Three7')"></div>
@@ -42,27 +42,27 @@
 
 <div class="row" style="display: flex;width: 100%;flex-wrap: wrap;">
      <div class="square2" id="Four1" onclick="move('Four1')"></div>
-     <div class="square1"id="Four2" onclick="move('Four2')"><img src="assets/pawn2.png" alt="" class="bpiece"id ="black7"onclick="clicked('black7','Four2')"></div>
+     <div class="square1"id="Four2" onclick="move('Four2')"><img src="assets/bishop.png" alt="" class="bpiece" id="white10"onclick="clicked('white10','Four2')"></div>
      <div class="square2"id="Four3" onclick="move('Four3')"></div>
-     <div class="square1" id="Four4" onclick="move('Four4')"></div>
-     <div class="square2" id="Four5" onclick="move('Four5')"><img src="assets/bishop2.png" alt="" class="bpiece" id ="black15"onclick="clicked('black15','Four5')"></div>
-     <div class="square1"id="Four6" onclick="move('Four6')"><img src="assets/pawn2.png" alt="" class="bpiece"id ="black6"onclick="clicked('black6','Four6')"></div>
-     <div class="square2"id="Four7" onclick="move('Four7')"><img src="assets/pawn.png" alt="" class="piece" id="white8"onclick="clicked('white8','Four7')"></div>
+     <div class="square1" id="Four4" onclick="move('Four4')"><img src="assets/knight.png" alt="" class="bpiece" id="white14"onclick="clicked('white14','Four4')"></div>
+     <div class="square2" id="Four5" onclick="move('Four5')"></div>
+     <div class="square1"id="Four6" onclick="move('Four6')"><img src="assets/rook.png" alt="" class="piece" id="white9" onclick="clicked('white9','Four6')"></div>
+     <div class="square2"id="Four7" onclick="move('Four7')"></div>
      <div class="square1"id="Four8" onclick="move('Four8')"></div>
 </div>
 <div class="row" style="width: 100%;display: flex;flex-wrap: wrap;">
-	<div class="square1" id="Five1" onclick="move('Five1')"><img src="assets/rook2.png" alt="" class="bpiece" id ="black16"onclick="clicked('black16','Five1')"></div>
+	<div class="square1" id="Five1" onclick="move('Five1')"></div>
 	<div class="square2"id="Five2" onclick="move('Five2')"></div>
 	<div class="square1"id="Five3" onclick="move('Five3')"></div>
 	<div class="square2"id="Five4" onclick="move('Five4')"></div>
-	<div class="square1"id="Five5" onclick="move('Five5')"><img src="assets/knight2.png" alt="" class="bpiece" id ="black14"onclick="clicked('black14','Eight1')"></div>
+	<div class="square1"id="Five5" onclick="move('Five5')"></div>
 	<div class="square2"id="Five6" onclick="move('Five6')"></div>
 	<div class="square1"id="Five7" onclick="move('Five7')"></div>
 	<div class="square2"id="Five8" onclick="move('Five8')"></div>
 </div>
 
 <div class="row" style="display: flex;width: 100%;flex-wrap: wrap;">
-     <div class="square2"id="Six1" onclick="move('Six1')"><img src="assets/rook.png" alt="" class="piece" id="white9" onclick="clicked('white9','Six1')"></div>
+     <div class="square2"id="Six1" onclick="move('Six1')"></div>
      <div class="square1"id="Six2" onclick="move('Six2')"></div>
      <div class="square2"id="Six3" onclick="move('Six3')"></div>
      <div class="square1"id="Six4" onclick="move('Six4')"></div>
@@ -72,14 +72,14 @@
      <div class="square1"id="Six8" onclick="move('Six8')"></div>
 </div>
 <div class="row" style="width: 100%;display: flex;flex-wrap: wrap;">
-	<div class="square1"id="Seven1" onclick="move('Seven1')"></div>
+	<div class="square1"id="Seven1" onclick="move('Seven1')"><img src="assets/rook2.png" alt="" class="bpiece" id ="black9"onclick="clicked('black9','Seven1')"></div>
 	<div class="square2"id="Seven2" onclick="move('Seven2')"><img src="assets/bishop2.png" class="piece" id="bpiece10" onclick="clicked('bpiece10','Seven2')"></div>
 	<div class="square1"id="Seven3" onclick="move('Seven3')"><img src="assets/knight2.png" alt="" class="bpiece" id ="black11"onclick="clicked('black11','Seven3')"></div>
 	<div class="square2"id="Seven4" onclick="move('Seven4')"><img src="assets/queen2.png" alt="" class="bpiece" id ="black12"onclick="clicked('black12','Seven4')"></div>
 	<div class="square1"id="Seven5" onclick="move('Seven5')"><img src="assets/king2.png" alt="" class="bpiece" id ="black13"onclick="clicked('black13','Seven5')"></div>
 	<div class="square2"id="Seven6" onclick="move('Seven6')"><img src="assets/knight2.png" alt="" class="bpiece" id ="black14"onclick="clicked('black14','Seven6')"></div>
-	<div class="square1"id="Seven7" onclick="move('Seven7')"></div>
-	<div class="square2"id="Seven8" onclick="move('Seven8')"></div>
+	<div class="square1"id="Seven7" onclick="move('Seven7')"><img src="assets/bishop2.png" alt="" class="bpiece" id ="black15"onclick="clicked('black15','Seven7')"></div>
+	<div class="square2"id="Seven8" onclick="move('Seven8')"><img src="assets/rook2.png" alt="" class="bpiece" id ="black16"onclick="clicked('black16','Seven8')"></div>
 </div>
 
 <div class="row" style="display: flex;width: 100%;flex-wrap: wrap;">
@@ -88,8 +88,8 @@
      <div class="square2"id="Eight3" onclick="move('Eight3')"><img src="assets/pawn2.png" alt="" class="bpiece"id ="black3"onclick="clicked('black3','Eight3')"></div>
      <div class="square1"id="Eight4" onclick="move('Eight4')"><img src="assets/pawn2.png" alt="" class="bpiece"id ="black4"onclick="clicked('black4','Eight4')"></div>
      <div class="square2"id="Eight5" onclick="move('Eight5')"><img src="assets/pawn2.png" alt="" class="bpiece"id ="black5"onclick="clicked('black5','Eight5')"></div>
-     <div class="square1"id="Eight6" onclick="move('Eight6')"></div>
-     <div class="square2"id="Eight7" onclick="move('Eight7')"></div>
+     <div class="square1"id="Eight6" onclick="move('Eight6')"><img src="assets/pawn2.png" alt="" class="bpiece"id ="black6"onclick="clicked('black6','Eight6')"></div>
+     <div class="square2"id="Eight7" onclick="move('Eight7')"><img src="assets/pawn2.png" alt="" class="bpiece"id ="black7"onclick="clicked('black7','Eight7')"></div>
      <div class="square1"id="Eight8" onclick="move('Eight8')"><img src="assets/pawn2.png" alt="" class="bpiece"id ="black8"onclick="clicked('black8','Eight8')"></div>
 </div>
 </div>
