--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <div id="board" style="display: flex;flex-wrap: wrap;">
  <div class="row" style="width: 100%;display: flex;flex-wrap: wrap;">
 	<div class="square1" id="One1" onclick="move('One1')"><img src="assets/pawn.png" alt="" class="piece" id="white1"onclick="clicked('white1','One1')"></div>
-	<div class="square2" id="One2"onclick="move('One2')"><img src="assets/pawn.png" alt="" class="piece" id="white2"onclick="clicked('white2','One2')"></div>
+	<div class="square2" id="One2"onclick="move('One2')"></div>
 	<div class="square1" id="One3" onclick="move('One3')"><img src="assets/pawn.png" alt="" class="piece" id="white3"onclick="clicked('white3','One3')"></div>
 	<div class="square2" id="One4" onclick="move('One4')"><img src="assets/pawn.png" alt="" class="piece" id="white4"onclick="clicked('white4','One4')"></div>
 	<div class="square1"id="One5" onclick="move('One5')"><img src="assets/pawn.png" alt="" class="piece" id="white5"onclick="clicked('white5','One5')"></div>
@@ -27,7 +27,7 @@
      <div class="square2"id="Two5" onclick="move('Two5')"><img src="assets/king.png" alt="" class="bpiece" id="white13"onclick="clicked('white13','Two5')"></div>
      <div class="square1"id="Two6" onclick="move('Two6')"></div>
      <div class="square2"id="Two7" onclick="move('Two7')"><img src="assets/bishop.png" alt="" class="bpiece" id="white15"onclick="clicked('white15','Two7')"></div>
-     <div class="square1"id="Two8" onclick="move('Two8')"></div>
+     <div class="square1"id="Two8" onclick="move('Two8')"><img src="assets/pawn2.png" alt="" class="bpiece"id ="black8"onclick="clicked('black8','Two8')"></div>
 </div>
 <div class="row" style="width: 100%;display: flex;flex-wrap: wrap;">
 	<div class="square1" id="Three1" onclick="move('Three1')"><</div>
@@ -52,7 +52,7 @@
 </div>
 <div class="row" style="width: 100%;display: flex;flex-wrap: wrap;">
 	<div class="square1" id="Five1" onclick="move('Five1')"></div>
-	<div class="square2"id="Five2" onclick="move('Five2')"></div>
+	<div class="square2"id="Five2" onclick="move('Five2')"><img src="assets/rook2.png" alt="" class="bpiece" id ="black16"onclick="clicked('black16','Five2')"></div>
 	<div class="square1"id="Five3" onclick="move('Five3')"></div>
 	<div class="square2"id="Five4" onclick="move('Five4')"></div>
 	<div class="square1"id="Five5" onclick="move('Five5')"></div>
@@ -62,7 +62,7 @@
 </div>
 
 <div class="row" style="display: flex;width: 100%;flex-wrap: wrap;">
-     <div class="square2"id="Six1" onclick="move('Six1')"></div>
+     <div class="square2"id="Six1" onclick="move('Six1')"><img src="assets/king2.png" alt="" class="bpiece" id ="black13"onclick="clicked('black13','Six1')"></div>
      <div class="square1"id="Six2" onclick="move('Six2')"></div>
      <div class="square2"id="Six3" onclick="move('Six3')"></div>
      <div class="square1"id="Six4" onclick="move('Six4')"></div>
@@ -76,10 +76,10 @@
 	<div class="square2"id="Seven2" onclick="move('Seven2')"><img src="assets/bishop2.png" class="piece" id="bpiece10" onclick="clicked('bpiece10','Seven2')"></div>
 	<div class="square1"id="Seven3" onclick="move('Seven3')"><img src="assets/knight2.png" alt="" class="bpiece" id ="black11"onclick="clicked('black11','Seven3')"></div>
 	<div class="square2"id="Seven4" onclick="move('Seven4')"><img src="assets/queen2.png" alt="" class="bpiece" id ="black12"onclick="clicked('black12','Seven4')"></div>
-	<div class="square1"id="Seven5" onclick="move('Seven5')"><img src="assets/king2.png" alt="" class="bpiece" id ="black13"onclick="clicked('black13','Seven5')"></div>
+	<div class="square1"id="Seven5" onclick="move('Seven5')"></div>
 	<div class="square2"id="Seven6" onclick="move('Seven6')"><img src="assets/knight2.png" alt="" class="bpiece" id ="black14"onclick="clicked('black14','Seven6')"></div>
 	<div class="square1"id="Seven7" onclick="move('Seven7')"><img src="assets/bishop2.png" alt="" class="bpiece" id ="black15"onclick="clicked('black15','Seven7')"></div>
-	<div class="square2"id="Seven8" onclick="move('Seven8')"><img src="assets/rook2.png" alt="" class="bpiece" id ="black16"onclick="clicked('black16','Seven8')"></div>
+	<div class="square2"id="Seven8" onclick="move('Seven8')"><img src="assets/pawn.png" alt="" class="piece" id="white2"onclick="clicked('white2','Seven8')"></div>
 </div>
 
 <div class="row" style="display: flex;width: 100%;flex-wrap: wrap;">
@@ -90,7 +90,7 @@
      <div class="square2"id="Eight5" onclick="move('Eight5')"><img src="assets/pawn2.png" alt="" class="bpiece"id ="black5"onclick="clicked('black5','Eight5')"></div>
      <div class="square1"id="Eight6" onclick="move('Eight6')"><img src="assets/pawn2.png" alt="" class="bpiece"id ="black6"onclick="clicked('black6','Eight6')"></div>
      <div class="square2"id="Eight7" onclick="move('Eight7')"><img src="assets/pawn2.png" alt="" class="bpiece"id ="black7"onclick="clicked('black7','Eight7')"></div>
-     <div class="square1"id="Eight8" onclick="move('Eight8')"><img src="assets/pawn2.png" alt="" class="bpiece"id ="black8"onclick="clicked('black8','Eight8')"></div>
+     <div class="square1"id="Eight8" onclick="move('Eight8')"></div>
 </div>
 </div>
  <!-- ul#nav>li.item$*4>a{Item $} (emmet example)--->
