check seems to work for both pawns can queen now just need to check all knight moves work then reset and addfull Squares and pieces to respective arrays  and try to play

--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 	<div class="square1" id="Three1" onclick="move('Three1')"><</div>
 	<div class="square2" id="Three2" onclick="move('Three2')"></div>
 	<div class="square1"id="Three3" onclick="move('Three3')"></div>
-	<div class="square2"id="Three4" onclick="move('Three4')"></div>
-	<div class="square1"id="Three5" onclick="move('Three5')"></div>
+	<div class="square2"id="Three4" onclick="move('Three4')"><img src="assets/rook2.png" alt="" class="bpiece" id ="black16"onclick="clicked('black16','Three4')"></div>
+	<div class="square1"id="Three5" onclick="move('Three5')"><img src="assets/pawn2.png" alt="" class="bpiece"id ="black6"onclick="clicked('black6','Three5')"></div>
 	<div class="square2"id="Three6" onclick="move('Three6')"></div>
 	<div class="square1"id="Three7" onclick="move('Three7')"></div>
 	<div class="square2"id="Three8" onclick="move('Three8')"></div>
@@ -52,17 +52,17 @@
 </div>
 <div class="row" style="width: 100%;display: flex;flex-wrap: wrap;">
 	<div class="square1" id="Five1" onclick="move('Five1')"></div>
-	<div class="square2"id="Five2" onclick="move('Five2')"><img src="assets/rook2.png" alt="" class="bpiece" id ="black16"onclick="clicked('black16','Five2')"></div>
+	<div class="square2"id="Five2" onclick="move('Five2')"></div>
 	<div class="square1"id="Five3" onclick="move('Five3')"></div>
 	<div class="square2"id="Five4" onclick="move('Five4')"></div>
 	<div class="square1"id="Five5" onclick="move('Five5')"></div>
 	<div class="square2"id="Five6" onclick="move('Five6')"></div>
 	<div class="square1"id="Five7" onclick="move('Five7')"></div>
-	<div class="square2"id="Five8" onclick="move('Five8')"></div>
+	<div class="square2"id="Five8" onclick="move('Five8')"><img src="assets/bishop2.png" alt="" class="bpiece" id ="black15"onclick="clicked('black15','Five8')"></div>
 </div>
 
 <div class="row" style="display: flex;width: 100%;flex-wrap: wrap;">
-     <div class="square2"id="Six1" onclick="move('Six1')"><img src="assets/king2.png" alt="" class="bpiece" id ="black13"onclick="clicked('black13','Six1')"></div>
+     <div class="square2"id="Six1" onclick="move('Six1')"></div>
      <div class="square1"id="Six2" onclick="move('Six2')"></div>
      <div class="square2"id="Six3" onclick="move('Six3')"></div>
      <div class="square1"id="Six4" onclick="move('Six4')"></div>
@@ -76,9 +76,9 @@
 	<div class="square2"id="Seven2" onclick="move('Seven2')"><img src="assets/bishop2.png" class="piece" id="bpiece10" onclick="clicked('bpiece10','Seven2')"></div>
 	<div class="square1"id="Seven3" onclick="move('Seven3')"><img src="assets/knight2.png" alt="" class="bpiece" id ="black11"onclick="clicked('black11','Seven3')"></div>
 	<div class="square2"id="Seven4" onclick="move('Seven4')"><img src="assets/queen2.png" alt="" class="bpiece" id ="black12"onclick="clicked('black12','Seven4')"></div>
-	<div class="square1"id="Seven5" onclick="move('Seven5')"></div>
+	<div class="square1"id="Seven5" onclick="move('Seven5')"><img src="assets/king2.png" alt="" class="bpiece" id ="black13"onclick="clicked('black13','Seven5')"></div>
 	<div class="square2"id="Seven6" onclick="move('Seven6')"><img src="assets/knight2.png" alt="" class="bpiece" id ="black14"onclick="clicked('black14','Seven6')"></div>
-	<div class="square1"id="Seven7" onclick="move('Seven7')"><img src="assets/bishop2.png" alt="" class="bpiece" id ="black15"onclick="clicked('black15','Seven7')"></div>
+	<div class="square1"id="Seven7" onclick="move('Seven7')"></div>
 	<div class="square2"id="Seven8" onclick="move('Seven8')"><img src="assets/pawn.png" alt="" class="piece" id="white2"onclick="clicked('white2','Seven8')"></div>
 </div>
 
@@ -88,7 +88,7 @@
      <div class="square2"id="Eight3" onclick="move('Eight3')"><img src="assets/pawn2.png" alt="" class="bpiece"id ="black3"onclick="clicked('black3','Eight3')"></div>
      <div class="square1"id="Eight4" onclick="move('Eight4')"><img src="assets/pawn2.png" alt="" class="bpiece"id ="black4"onclick="clicked('black4','Eight4')"></div>
      <div class="square2"id="Eight5" onclick="move('Eight5')"><img src="assets/pawn2.png" alt="" class="bpiece"id ="black5"onclick="clicked('black5','Eight5')"></div>
-     <div class="square1"id="Eight6" onclick="move('Eight6')"><img src="assets/pawn2.png" alt="" class="bpiece"id ="black6"onclick="clicked('black6','Eight6')"></div>
+     <div class="square1"id="Eight6" onclick="move('Eight6')"></div>
      <div class="square2"id="Eight7" onclick="move('Eight7')"><img src="assets/pawn2.png" alt="" class="bpiece"id ="black7"onclick="clicked('black7','Eight7')"></div>
      <div class="square1"id="Eight8" onclick="move('Eight8')"></div>
 </div>
